fix select input dropdown z-index because of input legend displayed in front of it

--- a/components/inputs/selects/selects.module.css
+++ b/components/inputs/selects/selects.module.css
@@ -9,7 +9,7 @@
     background-color: var(--white);
     box-shadow: var(--shadow-2);
     border-radius: 4px;
-    z-index: 1;
+    z-index: 11;
     margin-top: 6px;
     outline: none;
     padding: 6px 0;
